Add support for configuring Shared Sass Resources for using global mixins, variables, etc.

--- a/demo/assets/_scss/style.scss
+++ b/demo/assets/_scss/style.scss
@@ -8,4 +8,12 @@ header {
   .imported-sass {
     color: pink;
   }
+
+  .imported-sass-shared-var {
+    color: purple;
+
+    @include desktop {
+      color: $limeGreen;
+    }
+  }
 }
